# t-codec

./: .gitignore  CMakeLists.txt  Makefile  README.md  T-CODEC.pc.in  Toolchain-common.cmake  compile_definition.cmake
decoder/: CMakeLists.txt
decoder/audio/: CMakeLists.txt
decoder/audio/include/: audio_decoder.h  audio_decoder_version.h.in
decoder/audio/src/: audio_decoder.c
decoder/resources/: CMakeLists.txt
decoder/resources/plugin/: CMakeLists.txt
decoder/resources/plugin/audio/: CMakeLists.txt
decoder/resources/plugin/audio/aac/: CMakeLists.txt  decoder_plugin_aac.c
decoder/resources/plugin/audio/aac/include/: decoder_plugin_aac_version.h.in
decoder/resources/plugin/audio/ddp/: CMakeLists.txt  decoder_plugin_ddp.c
decoder/resources/plugin/audio/ddp/include/: decoder_plugin_ddp_version.h.in
decoder/resources/plugin/audio/include/: adec.h  audio_common.h  tcc_audio_common.h
decoder/resources/plugin/audio/mp3/: CMakeLists.txt  decoder_plugin_mp3.c
decoder/resources/plugin/audio/mp3/include/: decoder_plugin_mp3_version.h.in
decoder/resources/plugin/audio/pcm/: CMakeLists.txt  decoder_plugin_pcm.c
decoder/resources/plugin/include/: decoder_plugin.h  decoder_plugin_audio.h  decoder_plugin_versions.h  decoder_plugin_video.h
decoder/resources/plugin/interface/: CMakeLists.txt
decoder/resources/plugin/interface/include/: decoder_plugin_interface.h
decoder/resources/plugin/interface/src/: decoder_plugin_interface.c
decoder/resources/plugin/video/: CMakeLists.txt
decoder/resources/plugin/video/common/: CMakeLists.txt  decoder_plugin_video_common.c  decoder_plugin_video_frame.c  decoder_plugin_video_ips.c  decoder_plugin_video_ips_4kd2.c  decoder_plugin_video_ips_hevc.c  decoder_plugin_video_ips_jdec.c  decoder_plugin_video_ips_vdec.c
decoder/resources/plugin/video/common/include/: decoder_plugin_video_common.h  decoder_plugin_video_common_version.h.in  decoder_plugin_video_frame.h  decoder_plugin_video_ips.h
decoder/resources/plugin/video/dummy/: CMakeLists.txt  decoder_plugin_dummy.c
decoder/resources/plugin/video/h263/: CMakeLists.txt  decoder_plugin_h263.c
decoder/resources/plugin/video/h263/include/: decoder_plugin_h263_version.h.in
decoder/resources/plugin/video/h264/: CMakeLists.txt  decoder_plugin_h264.c
decoder/resources/plugin/video/h265/: CMakeLists.txt  decoder_plugin_h265.c
decoder/resources/plugin/video/mjpeg/: CMakeLists.txt  decoder_plugin_mjpeg.c
decoder/resources/plugin/video/mpeg2/: CMakeLists.txt  decoder_plugin_mpeg2.c
decoder/resources/plugin/video/mpeg4/: CMakeLists.txt  decoder_plugin_mpeg4.c
decoder/resources/plugin/video/vdec/: CMakeLists.txt
decoder/resources/plugin/video/vdec/include/: vdec.h  vdec_common.h  vdec_utils.h
decoder/resources/plugin/video/vdec/src/: vdec_k_common.c  vdec_k_hevc.c  vdec_k_mjpeg.c  vdec_k_vpu.c  vdec_k_vpu_4kd2.c  vdec_k_wmv78.c  video_decoder_vdec.c
decoder/resources/plugin/video/vp8/: CMakeLists.txt  decoder_plugin_vp8.c
decoder/resources/plugin/video/vp9/: CMakeLists.txt  decoder_plugin_vp9.c
decoder/resources/vdec_v3/: CMakeLists.txt  Makefile  vdec_v3.c  vdec_v3.h
decoder/resources/wrapper/: CMakeLists.txt  video_decode_resource.c
decoder/resources/wrapper/include/: video_decode_resource.h  video_decode_resource_version.h.in
decoder/video/: CMakeLists.txt
decoder/video/include/: video_clock_control.h  video_decoder.h  video_decoder_version.h.in  video_index_control.h
decoder/video/src/: video_clock_control.c  video_decoder.c  video_index_control.c
encoder/: CMakeLists.txt
encoder/resources/: CMakeLists.txt
encoder/resources/plugin/: CMakeLists.txt
encoder/resources/plugin/include/: encoder_plugin.h  encoder_plugin_versions.h  encoder_plugin_video.h
encoder/resources/plugin/interface/: CMakeLists.txt
encoder/resources/plugin/interface/include/: encoder_plugin_interface.h
encoder/resources/plugin/interface/src/: encoder_plugin_interface.c
encoder/resources/plugin/video/: CMakeLists.txt
encoder/resources/plugin/video/common/: CMakeLists.txt  encoder_plugin_video_common.c  encoder_plugin_video_ips.c  encoder_plugin_video_ips_4ke1.c  encoder_plugin_video_ips_jenc.c  encoder_plugin_video_ips_venc.c
encoder/resources/plugin/video/common/include/: encoder_plugin_video_common.h  encoder_plugin_video_common_version.h.in  encoder_plugin_video_ips.h
encoder/resources/plugin/video/dummy/: CMakeLists.txt  encoder_plugin_dummy.c
encoder/resources/plugin/video/dummy/include/: encoder_plugin_dummy_version.h.in
encoder/resources/plugin/video/h264/: CMakeLists.txt  encoder_plugin_h264.c
encoder/resources/plugin/video/h265/: CMakeLists.txt  encoder_plugin_h265.c
encoder/resources/plugin/video/h265/include/: encoder_plugin_h265_version.h.in
encoder/resources/plugin/video/mjpeg/: CMakeLists.txt  (+1 more)
encoder/resources/venc_v3/: CMakeLists.txt  Makefile  venc_v3.c  venc_v3.h
encoder/resources/wrapper/: CMakeLists.txt  video_encode_resource.c
encoder/resources/wrapper/include/: video_encode_resource.h  video_encode_resource_version.h.in
encoder/video/: CMakeLists.txt
encoder/video/include/: video_encoder.h  video_encoder_version.h.in
encoder/video/src/: video_encoder.c
tester/: CMakeLists.txt
tester/tester_common/: CMakeLists.txt
tester/tester_common/include/: dec_test.h  enc_test.h  test_common.h  vid_test.h  vid_test_tools.h
tester/tester_common/src/: dec_test.c  enc_test.c  vid_test.c  vid_test_tools.c
tester/tester_stress/: CMakeLists.txt  tester_stress.c
tester/tester_sv/: CMakeLists.txt  tester_sv.c
vpu_test/: CMakeLists.txt  Makefile  vpu_script.c  vpu_script.h  vpu_script_common.c  vpu_script_common.h  vpu_script_process.c  vpu_script_process.h  vpu_script_system.c  vpu_script_system.h  vpu_script_test.c  vpu_script_test.h  vpu_test_common.c  vpu_test_common.h  vpu_test_decoder.c  vpu_test_decoder.h  vpu_test_encoder.c  vpu_test_encoder.h  vpu_test_main.c
vpu_test/vpu_script_decoder_wrapper/: CMakeLists.txt  vpu_script_decoder_wrapper.h  vpu_script_decoder_wrapper_tcodec.c  vpu_script_decoder_wrapper_vdec.c
(+7 files in other folders)
