CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_audio_decoder")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/src/audio_decoder.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${TUTIL_INCLUDE_DIRS}
	${TUTIL_INC_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/interface/include
	)

ADD_COMPILE_OPTIONS(-g -w)

if(USE_VPU_LEGACY)
set(OPTIONAL_LIBRARIES tc_decoderplugininterface)
endif()

LINK_LIBRARIES(${GLIB2_LIBRARIES} ${TUTIL_LIBRARIES} ${OPTIONAL_LIBRARIES})
LINK_DIRECTORIES(${TUTIL_LIB_DIR})

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

SET(AUDIO_DECODER_MAJOR_VERSION "0")
SET(AUDIO_DECODER_MINOR_VERSION "0")
SET(AUDIO_DECODER_PATCH_VERSION "0")

SET_TARGET_PROPERTIES(${OUTPUT_ELF}
	PROPERTIES
	VERSION "${AUDIO_DECODER_MAJOR_VERSION}.${AUDIO_DECODER_MINOR_VERSION}.${AUDIO_DECODER_PATCH_VERSION}"
	SOVERSION "${AUDIO_DECODER_MAJOR_VERSION}")

CONFIGURE_FILE(
		${CMAKE_CURRENT_SOURCE_DIR}/include/audio_decoder_version.h.in
		${CMAKE_CURRENT_SOURCE_DIR}/include/audio_decoder_version.h)

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)

INSTALL(FILES
			${CMAKE_CURRENT_SOURCE_DIR}/include/audio_decoder.h
		DESTINATION
			${CMAKE_INSTALL_INCLUDEDIR})