CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_video_encoder")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/src/video_encoder.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${CMAKE_SOURCE_DIR}/encoder/video/include
	${CMAKE_SOURCE_DIR}/encoder/resources/wrapper/include
	)

ADD_COMPILE_OPTIONS(-g -Wall)

LINK_DIRECTORIES()

LINK_LIBRARIES(tc_video_encoder_resource ${GLIB2_LIBRARIES})

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

SET(VIDEO_ENCODER_MAJOR_VERSION "1")
SET(VIDEO_ENCODER_MINOR_VERSION "0")
SET(VIDEO_ENCODER_PATCH_VERSION "0")

SET_TARGET_PROPERTIES(${OUTPUT_ELF}
	PROPERTIES
	VERSION "${VIDEO_ENCODER_MAJOR_VERSION}.${VIDEO_ENCODER_MINOR_VERSION}.${VIDEO_ENCODER_PATCH_VERSION}"
	SOVERSION "${VIDEO_ENCODER_MAJOR_VERSION}")

CONFIGURE_FILE(
		${CMAKE_CURRENT_SOURCE_DIR}/include/video_encoder_version.h.in
		${CMAKE_CURRENT_SOURCE_DIR}/include/video_encoder_version.h)

TARGET_INCLUDE_DIRECTORIES(${OUTPUT_ELF} PUBLIC ${GLIB2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${LIB} ${GLIB2_LIBRARIES})

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)

INSTALL(FILES
			${CMAKE_CURRENT_SOURCE_DIR}/include/video_encoder.h
		DESTINATION
			${CMAKE_INSTALL_INCLUDEDIR})