CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_tester_common")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/src/vid_test_tools.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	)

if(USE_ENCODER)
SET(SRC_FILES ${SRC_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/src/enc_test.c)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/encoder/video/include)
LINK_LIBRARIES(tc_video_encoder)
endif()

if(USE_DECODER)
SET(SRC_FILES ${SRC_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/src/dec_test.c)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/decoder/video/include)
LINK_LIBRARIES(tc_video_decoder)
endif()

if(USE_DECODER AND USE_ENCODER)
SET(SRC_FILES ${SRC_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/src/vid_test.c)
endif()

ADD_COMPILE_OPTIONS(-g -Wall)

LINK_LIBRARIES(${GLIB2_LIBRARIES} ${TUTIL_LIBRARIES})
LINK_DIRECTORIES(${TUTIL_LIB_DIR})

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
