CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET(OUTPUT_ELF "_TEST_VIDEO")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/tester_sv.c
	)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/tester/tester_common/include
	${GLIB2_INCLUDE_DIRS}
	)

if(USE_ENCODER)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/encoder/video/include)
LINK_LIBRARIES(tc_video_encoder)
endif()

if(USE_DECODER)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/decoder/video/include)
LINK_LIBRARIES(tc_video_decoder)
endif()

ADD_COMPILE_OPTIONS(
	-g -Wall
	)

LINK_LIBRARIES(${GLIB2_LIBRARIES} tc_tester_common)

ADD_EXECUTABLE(${OUTPUT_ELF} ${SRC_FILES})

INSTALL(
	TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)

#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/files_for_test/YUV_FILES DESTINATION ${CMAKE_INSTALL_PREFIX}/data)
#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/files_for_test/CODEC_FILES DESTINATION ${CMAKE_INSTALL_PREFIX}/data)