CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "venc_v3_interface")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/venc_v3.c
	)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${LINUX_KERNEL_DIR}/include/video/telechips/
	${CMAKE_SOURCE_DIR}/encoder/video/include
	${CMAKE_SOURCE_DIR}/encoder/resources/wrapper/include
	)

ADD_COMPILE_OPTIONS(-g -w)

LINK_LIBRARIES(  dl)

LINK_DIRECTORIES( video_encoder_resource )

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

set(VENC_V3_INTERFACE_MAJOR_VERSION "0")
set(VENC_V3_INTERFACE_MINOR_VERSION "0")
set(VENC_V3_INTERFACE_PATCH_VERSION "0")

set_target_properties(${OUTPUT_ELF}
	PROPERTIES
	VERSION "${VENC_V3_INTERFACE_MAJOR_VERSION}.${VENC_V3_INTERFACE_MINOR_VERSION}.${VENC_V3_INTERFACE_PATCH_VERSION}"
	SOVERSION "${VENC_V3_INTERFACE_MAJOR_VERSION}")

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)

TARGET_INCLUDE_DIRECTORIES(${OUTPUT_ELF} PUBLIC   )
TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${LIB}  )
