CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_encoderplugininterface")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/src/encoder_plugin_interface.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/encoder/resources/plugin/include
	)

ADD_COMPILE_OPTIONS(-g -w)

LINK_LIBRARIES(${GLIB2_LIBRARIES} dl)

LINK_DIRECTORIES(
	)

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

set(ENCODER_PLUGIN_INTERFACE_MAJOR_VERSION "0")
set(ENCODER_PLUGIN_INTERFACE_MINOR_VERSION "0")
set(ENCODER_PLUGIN_INTERFACE_PATCH_VERSION "0")

set_target_properties(${OUTPUT_ELF}
	PROPERTIES
	VERSION "${ENCODER_PLUGIN_INTERFACE_MAJOR_VERSION}.${ENCODER_PLUGIN_INTERFACE_MINOR_VERSION}.${ENCODER_PLUGIN_INTERFACE_PATCH_VERSION}"
	SOVERSION "${ENCODER_PLUGIN_INTERFACE_MAJOR_VERSION}")

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
