CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_decoderplugin_aac")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_aac.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${TUTIL_INCLUDE_DIRS}
	${TUTIL_INC_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/audio/include
	)

ADD_COMPILE_OPTIONS(-g -w)

LINK_LIBRARIES(${TUTIL_LIBRARIES} ${GLIB2_LIBRARIES})
LINK_DIRECTORIES(${TUTIL_LIB_DIR})

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

set(DECODERPLUGIN_AAC_MAJOR_VERSION "1")
set(DECODERPLUGIN_AAC_MINOR_VERSION "0")
set(DECODERPLUGIN_AAC_PATCH_VERSION "0")

set_target_properties(${OUTPUT_ELF}
	PROPERTIES
	VERSION "${DECODERPLUGIN_AAC_MAJOR_VERSION}.${DECODERPLUGIN_AAC_MINOR_VERSION}.${DECODERPLUGIN_AAC_PATCH_VERSION}"
	SOVERSION "${DECODERPLUGIN_AAC_MAJOR_VERSION}")

configure_file(
		${CMAKE_CURRENT_SOURCE_DIR}/include/decoder_plugin_aac_version.h.in
		${CMAKE_CURRENT_SOURCE_DIR}/include/decoder_plugin_aac_version.h
)
INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
