CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_decoderplugin_video_common")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_video_common.c
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_video_frame.c
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_video_ips.c
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_video_ips_vdec.c
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_video_ips_jdec.c
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_video_ips_4kd2.c
	${CMAKE_CURRENT_SOURCE_DIR}/decoder_plugin_video_ips_hevc.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${TUTIL_INCLUDE_DIRS}
	${TUTIL_INC_DIR}
	${CMAKE_SOURCE_DIR}/decoder/video/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/video/common/include
	${LINUX_KERNEL_DIR}/include/video/tcc
	${LINUX_KERNEL_DIR}/include/video/telechips/
	)

ADD_COMPILE_OPTIONS(-g -Wall)

LINK_DIRECTORIES(${TUTIL_LIB_DIR})

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

SET(DECODERPLUGIN_COMMON_MAJOR_VERSION "1")
SET(DECODERPLUGIN_COMMON_MINOR_VERSION "0")
SET(DECODERPLUGIN_COMMON_PATCH_VERSION "0")

SET_TARGET_PROPERTIES(${OUTPUT_ELF}
	PROPERTIES
	VERSION "${DECODERPLUGIN_COMMON_MAJOR_VERSION}.${DECODERPLUGIN_COMMON_MINOR_VERSION}.${DECODERPLUGIN_COMMON_PATCH_VERSION}"
	SOVERSION "${DECODERPLUGIN_COMMON_MAJOR_VERSION}")

CONFIGURE_FILE(
		${CMAKE_CURRENT_SOURCE_DIR}/include/decoder_plugin_video_common_version.h.in
		${CMAKE_CURRENT_SOURCE_DIR}/include/decoder_plugin_video_common_version.h)

TARGET_INCLUDE_DIRECTORIES(${OUTPUT_ELF} PUBLIC ${GLIB2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${LIB} ${GLIB2_LIBRARIES})

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
