CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_decoderplugin_vdec")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/src/vdec_k_common.c
	${CMAKE_CURRENT_SOURCE_DIR}/src/vdec_k_vpu.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${TUTIL_INCLUDE_DIRS}
	${TUTIL_INC_DIR}
	${CMAKE_SOURCE_DIR}/decoder/video/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/video/vdec/include
	${CMAKE_SOURCE_DIR}/decoder/resources/plugin/video/common/include
	${LINUX_KERNEL_DIR}/include/video/tcc
	)

ADD_COMPILE_OPTIONS(-g -Wall)

LINK_DIRECTORIES(${TUTIL_LIB_DIR})

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES(${OUTPUT_ELF} PUBLIC ${TUTIL_INCLUDE_DIRS} ${GLIB2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${LIB} ${TUTIL_LIBRARIES} ${GLIB2_LIBRARIES})

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
