CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(OUTPUT_ELF "tc_encoderplugin_dummy")

SET(SRC_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/encoder_plugin_dummy.c
	)

INCLUDE_DIRECTORIES(
	${GLIB2_INCLUDE_DIRS}
	${CMAKE_SOURCE_DIR}/encoder/video/include
	${CMAKE_SOURCE_DIR}/encoder/resources/plugin/include
	${CMAKE_SOURCE_DIR}/encoder/resources/plugin/video/common/include
	${LINUX_KERNEL_DIR}/include/video/tcc
	${LINUX_KERNEL_DIR}/include/video/telechips/
	)

ADD_COMPILE_OPTIONS(-g -Wall)

LINK_DIRECTORIES(
	${JP_FACTORY_LIB_DIR}
	)

LINK_LIBRARIES(tc_encoderplugin_video_common ${GLIB2_LIBRARIES})

ADD_LIBRARY(${OUTPUT_ELF} SHARED ${SRC_FILES})

SET(DECODERPLUGIN_DUMMY_MAJOR_VERSION "1")
SET(DECODERPLUGIN_DUMMY_MINOR_VERSION "0")
SET(DECODERPLUGIN_DUMMY_PATCH_VERSION "0")

SET_TARGET_PROPERTIES(${OUTPUT_ELF}
	PROPERTIES
	VERSION "${DECODERPLUGIN_DUMMY_MAJOR_VERSION}.${DECODERPLUGIN_DUMMY_MINOR_VERSION}.${DECODERPLUGIN_DUMMY_PATCH_VERSION}"
	SOVERSION "${DECODERPLUGIN_DUMMY_MAJOR_VERSION}")

CONFIGURE_FILE(
		${CMAKE_CURRENT_SOURCE_DIR}/include/encoder_plugin_dummy_version.h.in
		${CMAKE_CURRENT_SOURCE_DIR}/include/encoder_plugin_dummy_version.h)

TARGET_INCLUDE_DIRECTORIES(${OUTPUT_ELF} PUBLIC ${GLIB2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${OUTPUT_ELF} ${LIB} ${GLIB2_LIBRARIES})

INSTALL(TARGETS ${OUTPUT_ELF}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	)
